# intermittent-risc-v

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  benchmark.sh  pain.txt  setup.sh  sourceme.sh
.devcontainer/: devcontainer.json
benchmarks/: .gitignore  Makefile  common.mk  instruction_labler.sh  make-build.mk  make-run.mk  run.sh  validate.sh
benchmarks/adpcm/: CMakeLists.txt
benchmarks/adpcm/src/: CMakeLists.txt
benchmarks/adpcm/src/adpcm/: adpcm.c  data_adpcm.h  data_pcm.h  rawcaudio.c  rawdaudio.c
benchmarks/aes/: CMakeLists.txt
benchmarks/aes/src/: CMakeLists.txt
benchmarks/aes/src/aes/: aes.c  test.c
benchmarks/coremark/: CMakeLists.txt
benchmarks/crc/: CMakeLists.txt  instruction_labler.sh
benchmarks/crc/src/: CMakeLists.txt
benchmarks/crc/src/crc/: main.c
benchmarks/devel/: CMakeLists.txt  instruction_labler.sh
benchmarks/devel/src/: CMakeLists.txt  main.S  main.c
benchmarks/dijkstra/: CMakeLists.txt
benchmarks/dijkstra/src/: CMakeLists.txt
benchmarks/logs/: aes-uninstrumented-run-clank-0-0-final  aes-uninstrumented-run-clank-125000-250000-final  aes-uninstrumented-run-clank-1250000-2500000-final  aes-uninstrumented-run-clank-12500000-25000000-final  aes-uninstrumented-run-clank-250000-500000-final  aes-uninstrumented-run-clank-2500000-5000000-final  aes-uninstrumented-run-clank-50000-100000-final  aes-uninstrumented-run-clank-500000-1000000-final  aes-uninstrumented-run-clank-5000000-10000000-final  aes-uninstrumented-run-clank-90000-0-final  aes-uninstrumented-run-clank-90000-100000-final  aes-uninstrumented-run-clank-90000-1000000-final  aes-uninstrumented-run-clank-90000-10000000-final  aes-uninstrumented-run-clank-90000-5000000-final  aes-uninstrumented-run-clank-cont  aes-uninstrumented-run-clank-final  aes-uninstrumented-run-nacho-clank-1024-2-cont  aes-uninstrumented-run-nacho-clank-1024-2-final  aes-uninstrumented-run-nacho-clank-1024-4-cont  aes-uninstrumented-run-nacho-clank-256-4-cont  aes-uninstrumented-run-nacho-clank-256-4-final  aes-uninstrumented-run-nacho-naive-256-2-cont  aes-uninstrumented-run-nacho-naive-256-2-final  aes-uninstrumented-run-nacho-naive-512-4-cont  aes-uninstrumented-run-nacho-pw-512-4-final  aes-uninstrumented-run-nacho_clank-1024-2-0-0-cont  aes-uninstrumented-run-nacho_clank-1024-2-0-0-final  aes-uninstrumented-run-nacho_clank-1024-2-cont  aes-uninstrumented-run-nacho_clank-1024-2-final  aes-uninstrumented-run-nacho_clank-1024-4-0-0-cont  aes-uninstrumented-run-nacho_clank-1024-4-0-0-final  aes-uninstrumented-run-nacho_clank-1024-4-cont  aes-uninstrumented-run-nacho_clank-1024-4-final  aes-uninstrumented-run-nacho_clank-256-2-0-0-cont  aes-uninstrumented-run-nacho_clank-256-2-0-0-final  aes-uninstrumented-run-nacho_clank-256-2-cont  aes-uninstrumented-run-nacho_clank-256-2-final  aes-uninstrumented-run-nacho_clank-256-4-0-0-cont  aes-uninstrumented-run-nacho_clank-256-4-0-0-final  aes-uninstrumented-run-nacho_clank-256-4-cont  (+1376 more)
benchmarks/picojpeg/: CMakeLists.txt
benchmarks/picojpeg/src/: CMakeLists.txt
benchmarks/quicksort/src/: CMakeLists.txt  main.c
benchmarks/sha/: CMakeLists.txt
benchmarks/sha/src/: CMakeLists.txt
benchmarks/sha/src/sha/: main.c  sha.c
benchmarks/towers/: CMakeLists.txt
benchmarks/towers/src/: CMakeLists.txt
benchmarks/towers/src/towers/: towers_main.c
chipyard/: build.sh  init.sh
figures/: architecture-v2.drawio  architecture.drawio  bits-example.drawio  example.drawio  implementation.drawio  volatility.drawio  war.drawio  ~$example.drawio.bkp
host-bin/: docker-attach  docker-run  docker-start  docker-stop
icemu/: .gitignore  build.sh
icemu/plugins/: CMakeLists.txt  build.sh
icemu/plugins/cache_dead_block_plugin/: CMakeLists.txt  CacheDeadBlock.cpp
icemu/plugins/cache_example/: CMakeLists.txt  CacheExample.cpp
icemu/plugins/cache_lru_plugin/: CMakeLists.txt  CacheLRU.cpp
icemu/plugins/cache_temp_dead_block_plugin/: CMakeLists.txt  CacheTempDeadBlock.cpp
icemu/plugins/cache_utilization_plugin/: CMakeLists.txt  CacheUtilization.cpp
icemu/plugins/cache_with_hints/: CMakeLists.txt  CacheWithHints.cpp
icemu/plugins/clank_cache_plugin/: CMakeLists.txt  ClankCache.cpp
icemu/plugins/custom_cache_plugin/: CMakeLists.txt  CustomCache.cpp
icemu/plugins/external_test_plugin/: CMakeLists.txt  ExternalTest.cpp
icemu/plugins/includes/: Cache.hpp  CacheHints.hpp  CacheMem.hpp  CacheMemClank.hpp  CacheProwl.hpp  CacheSkewAssociative.hpp  Checkpoint.hpp  CycleCostCalculator.hpp  CycleCounter.h  DetectWAR.h  LocalMemory.hpp  Logger.hpp  MemChecker.hpp  RegisterCheckpoint.hpp  ShadowMemory.hpp  StackTracker.hpp  Stats.hpp  Utils.hpp
icemu/plugins/memory_stats_plugin/: CMakeLists.txt  MemoryStats.cpp
icemu/plugins/replay_cache_baseline_plugin/: CMakeLists.txt  PowerFailureGenerator.hpp  ReplayCacheBaseline.cpp  ReplayCacheBaselineCache.hpp  Stats.hpp
icemu/plugins/replay_cache_plugin/: AsyncWriteBackCache.hpp  CMakeLists.txt  PowerFailureGenerator.hpp  ReplayCache.cpp  Stats.hpp  util.ipp
icemu/plugins/simple_war_detect_plugin/: CMakeLists.txt  SimpleWARDetect.cpp
icemu/plugins/stack_war_detection_plugin/: CMakeLists.txt  StackWARDetection.cpp
icemu/plugins/test-hint-func/: build.sh  test-cache.ll.elf  test.c  test.ll.elf
icemu/plugins/wrw_detection_plugin/: CMakeLists.txt  WRWDetection.cpp
llvm/: .gitignore  README.md  build.sh  diff.sh  download.sh
noelle/: build.sh
passes/: Makefile  build.sh
passes/common/PassUtils/src/: CMakeLists.txt  PassUtils.cpp
plotting/: .gitignore  BenchmarkConfiguration.py  BenchmarkPlot.ipynb  BenchmarkPlots.ipynb  BrokenPlot.py  CacheVariation.ipynb  CacheVariations.ipynb  Color.py  FinalPlots.ipynb  NachoVariations.ipynb  PowerFailures.ipynb  PrimaryStoryLine.ipynb  build.sh
scripts/: iclang  irv-docker-run  pass-apply
toolchains/: setup.sh
toolchains/riscv/testcode/towers-hack/src/: CMakeLists.txt  ORIG-towers.S  ORIG-towers.elf  a.out  compile.sh  towers.S  towers.elf  towers.lld.elf
toolchains/riscv/testcode/towers-hack/src/portme/: syscalls.c
(+584 files in other folders)
